# quant-system

./: .env.example  .gitignore  README.md
deploy/: nginx-quant.conf  setup-server.sh
docker/: docker-compose.dev.yml  docker-compose.yml  init.sql
docker/biz-service/: Dockerfile
docker/data-pipeline/: Dockerfile
docker/frontend/: nginx.conf
docker/fund-pipeline/: Dockerfile
docker/gateway/: Dockerfile
docker/signal-agent/: Dockerfile
quant-agent/: pyproject.toml
quant-agent/src/crusher/: __init__.py  calculator.py
quant-agent/src/data_pipeline/: grpc_service.py  scheduler.py  state.py  workflow_runner.py
quant-agent/src/data_pipeline/phases/: __init__.py  base_phase.py  phase0_health_probe.py  phase1_parallel_fetch.py  phase2_cross_validate.py  phase3_normalize_publish.py
quant-agent/src/factor_signal/: __init__.py  engine.py
quant-agent/src/fetchers/: __init__.py  basis.py  cbot.py  cot.py  dce.py  fx.py  inventory.py  usda.py
quant-agent/src/fund_pipeline/: fetchers.py  main.py
quant-agent/src/mcp_server/: server.py
quant-agent/src/signal_agent/: graph.py  grpc_service.py  llm_provider.py  main.py  nodes.py  state.py  tools.py
quant-agent/src/validators/: __init__.py  checks.py
quant-gateway/: go.mod
quant-gateway/configs/: config.yaml
quant-proto/: buf.gen.yaml  buf.yaml
quant-proto/agent/: signal_service.proto
quant-proto/alert/: alert_service.proto
quant-proto/common/: enums.proto  market_context.proto
quant-services/: build.gradle.kts  gradlew  settings.gradle.kts
scripts/: smoke-test.sh
(+60 files in other folders)
