[project]
name = "quant-agent"
version = "0.1.0"
description = "Soybean research MCP server + data tools"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "akshare",
    "redis",
    "psycopg[binary]",
    "pandas",
    "httpx",
    "apscheduler",
    "langgraph",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120
